Bugfix: overlapping collapse button

--- a/src/components/Professtion/Simulation/CollapBtn/CollapBtn.scss
+++ b/src/components/Professtion/Simulation/CollapBtn/CollapBtn.scss
@@ -1,7 +1,6 @@
 .CollapBtn-container {
     // position: relative;
     // left: 12%;
-    position: static;
     width: 888px;
     left: 0px;
     top: 0px;
@@ -9,7 +8,6 @@
 
 .CollapBtn-content {
     width: 900px;
-    height: 56px;
     left: 0px;
     top: 0px;
     text-align: left;
